[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.1.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = "0.1.8"
futures = "0.3.21"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
duct = "0.13.5"
