[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.1.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = "0.1.8"
futures = "0.3.21"
warp = "0.3.2"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.0", features = ["derive"] }
