[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.1.0"
futures = "0.3.21"
warp = "0.3.2"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.0", features = ["derive"] }
sha2 = { version = "0.10.2" }
base64 = { version = "0.13.0" }
